# sonic-forge

./: .gitignore  MANIFEST.md  bytebeat-dj.sh  bytebeat-rating.md  pyproject.toml  sound-demo-tour.sh  sound-rating.md  toolnudger.yaml  ∆captainslog.md  ∑ship.md
bakeoff-songs/: bluegrass-cranes-sonnet46.yaml  europop-claude-haiku.yaml  europop-claude-opus.yaml  europop-claude-opus46.yaml  europop-claude-sonnet.yaml  europop-claude-sonnet46-bluegrass-raw.txt  europop-gemma3-4b.yaml  europop-gemma3n-e4b.yaml  europop-qwen35-4b.yaml  europop-qwen35-9b.yaml
chuck-music/: cathedral-drift.ck  coding-flow.ck  dark-ambient.ck  dark-industrial.ck  dark-space.ck  dark-techno.ck  play.sh
diary/: 2026-04-17-edge-tts-integration.md
pattern-engine/: .gitignore  DSL-text-2-music-yaml.md  HOW-WE-DID-IT.md  MATERIALS-BAY-PLAN.md  acid_session.py  dance.sh  render_vibevoice_demos.py  songfile.py  songs.py  tidal.py  trance.py  trance1_1.py  trance2.py
pattern-engine/demos/: play-demos.sh
pattern-engine/demos-vibevoice/: play-demos.sh
pattern-engine/tts-comparison/: .gitignore  KOKORO-PAUSE-CONTROL.md  REPORT.md  generate_samples.py  play-comparison.sh
src/sonic_forge/: __init__.py  cli.py  image_heads.py  kokoro_prep.py  launcher.py  llm.py  narrate.py  robotize.py  sing.py  songfile.py  songs.py  spritesheet.py  talking_heads.py  templates.py  tts.py
src/sonic_forge/chuck/: coding-ambient.ck  (+4 more)
strudel-node/: REPORT.md  inspect-events.mjs  package-lock.json  package.json  play.mjs  test-patterns.mjs
tests/: test_narrate.py
tests/visual/: test_image.py  test_image2.py
(+8 files in other folders)
